# linuxPlayground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  bbuild.sh  build.sh  rebuild.sh
.github/workflows/: cmake.yml
chapter_00/: CMakeLists.txt
chapter_00/src/: main.cpp
chapter_01/: CMakeLists.txt
chapter_01/test/: CMakeLists.txt
chapter_01/test/MockingTests/: MockedBook.cpp  MockedBookTest.cpp
chapter_01/test/UnitTests/: FixturesTest.cpp  SimpleUnitTest.cpp
chapter_01_testing/: CMakeLists.txt
chapter_01_testing/src/: main.cpp  stdafx.h
chapter_01_testing/test/: CMakeLists.txt  stdafx_test.h
chapter_01_testing/test/MockingTests/: MockedBook.cpp  MockedBookTest.cpp
chapter_01_testing/test/UnitTests/: SimpleUnitTest.cpp
chapter_02/: CMakeLists.txt
chapter_02/src/: main.cpp  test1.cpp  test2.cpp
chapter_02_thread_synchronization/src/: test1.cpp  test2.cpp
chapter_03/: CMakeLists.txt
chapter_03/src/: SmartContainer.cpp  SmartContainer.hpp  SmartContainer.inl  main.cpp
chapter_03_smart_container/src/: SmartContainer.hpp  main.cpp
chapter_04/: CMakeLists.txt
chapter_04/src/: Base.hpp  main.cpp
chapter_04_reversed_inheritance_CRPT/src/: Derived.hpp
chapter_05/example_2/: CMakeLists.txt
chapter_05/example_2/server/: main.cpp
chapter_05/example_3/: CMakeLists.txt
chapter_05_boost_asio/example_1/: CMakeLists.txt
chapter_05_boost_asio/example_1/client/: main.cpp
chapter_05_boost_asio/example_1/server/: main.cpp
chapter_05_boost_asio/example_2/client/: main.cpp
chapter_05_boost_asio/example_2/server/: main.cpp
chapter_05_boost_asio/example_3/: CMakeLists.txt  main.cpp
chapter_06/: CMakeLists.txt
chapter_06/src/: Animal.cpp  EatingImplementation2.cpp  main.cpp
chapter_06/test/: CMakeLists.txt  DummyTest.cpp  EatingTestImpl.cpp
chapter_06_dependency_injection/: CMakeLists.txt
chapter_06_dependency_injection/src/: EatingImplementation1.cpp  EatingImplementation3.cpp  EatingImplementationDefault.cpp  EatingInterface.cpp
chapter_07_type_traits/: CMakeLists.txt
chapter_07_type_traits/src/: main.cpp
chapter_08_templates/: CMakeLists.txt
chapter_08_templates/src/: Animal.hpp  main.cpp  sfinae.hpp  variadicLogging.hpp
chapter_09_concepts/: CMakeLists.txt
chapter_09_concepts/src/: main.cpp
chapter_09_modules/: CMakeLists.txt
chapter_10_coroutines/: CMakeLists.txt
chapter_10_coroutines/src/: main.cpp
chapter_11_string_view/: CMakeLists.txt
chapter_11_string_view/src/: main.cpp
chapter_12_modules/: CMakeLists.txt
chapter_12_modules/src/: main.cpp
chapter_12_modules/src/modules/: nicePrintout.cpp  rudePrintout.cpp
chapter_13_decltype_declval/: CMakeLists.txt
chapter_13_decltype_declval/src/: main.cpp
chapter_14_lambdas/: CMakeLists.txt
chapter_14_lambdas/src/: main.cpp
chapter_15_ranges/: CMakeLists.txt
chapter_15_ranges/src/: example1.cpp  example2_cppCommunity.cpp  main.cpp
chapter_16_asserts/src/: main.cpp
chapter_16_asserts_variants_any_functions/: CMakeLists.txt
chapter_16_asserts_variants_any_functions/src/: main.cpp  variant1.cpp  variant2.cpp
chapter_17_chrono/: CMakeLists.txt
chapter_17_chrono/src/: main.cpp
chapter_18_filesystem/: CMakeLists.txt
chapter_18_filesystem/src/: main.cpp
chapter_19_move_semantic/: CMakeLists.txt
chapter_19_move_semantic/src/: main.cpp  moveSemantic.cpp  operatorOverloading.cpp
chapter_20_Latex/: CMakeLists.txt
chapter_20_Latex/doc/: CMakeLists.txt  CMakeLists.txt_old  master.tex
chapter_21_bitwise_operations/: CMakeLists.txt
chapter_21_bitwise_operations/src/: main.cpp  task1.cpp  task2.cpp
chapter_22_threads_future/: CMakeLists.txt
chapter_22_threads_future/src/: example1.cpp  example2.cpp  main.cpp
chapter_23_threads/: CMakeLists.txt
chapter_23_threads/src/: exercise2_ship.cpp  main.cpp
chapter_23_threads_udemy/: CMakeLists.txt
chapter_23_threads_udemy/src/: exercise1.cpp  exercise2_ship.cpp  exercise3_parallel_accumulate.cpp  exercise4_condition_variable.cpp  exercise5_parallel_accumulate_async.cpp  exercuse3_parallel_acumulate.cpp  main.cpp  thread_guard.hpp
chapter_24_variantCppCommunityDemo/: CMakeLists.txt
chapter_24_variantCppCommunityDemo/src/: main.cpp
chapter_25_thread_pool/: CMakeLists.txt
chapter_25_thread_pool/src/: main.cpp  threadSafeQeueue.hpp
chapter_26_Qt_core/: CMakeLists.txt
chapter_26_Qt_core/src/: TestClass.cpp  TestClass.h  main.cpp
chapter_27_object_tree/: CMakeLists.txt
chapter_27_object_tree/src/: Item.hpp  main.cpp
src/: main.cpp
test/: CMakeLists.txt  DummyTest.cpp  main.cpp
test/MockingTests/: MockedBookTest.cpp
